blockml/test/errors/02_field/e25/e25.view
view: e25
table: 1
fields:
- measure: www        
